--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_GEMINI_API_KEY="AIzaSyCyC_ZpPA7t6POHTE7sPhRMJPXj_AaI0qk"
-VITE_OPENAI_API_KEY="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"
+VITE_GEMINI_API_KEY= "paste here your gemini api key"   // replace the text with your actual api keys
+VITE_OPENAI_API_KEY= "paste here your chatgpt api key"
